# fastapi_zero

./: pyproject.toml
fastapi_zero/: app.py
